argo-app/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - uptime.jerryberry.nl
      secretName: uptime-kuma-ingress-tls
  rules:
    - host: uptime.jerryberry.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-svc
                port:
                  number: 3001
